--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to RichardsDevelopment's homepage!
-description: Bookmark this page to keep an eye on any new projects or changes.
+title: Eric Richards Projects
+
