Change title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
-title: Eric Richards Projects
+title: Welcome to the ePortfolio for Eric Richards! 
+description: Be sure to check back frequently for updates and new projects!
 
